# Cloud-Gym

./: .gitignore  README.md  pyproject.toml
.github/workflows/: iac-fix.yml  stackfix.yml
cloudgym/: __init__.py  cli.py
cloudgym/benchmark/: dataset.py  evaluator.py
cloudgym/fixer/: __init__.py  cli.py  detector.py  formatter.py  lambda_handler.py  repairer.py
cloudgym/generator/: formatter.py  pipeline.py
cloudgym/inverter/: _cf_injectors.py  _cf_utils.py  _hcl_utils.py  _tf_injectors.py  _yaml_cf.py  agentic.py  engine.py  programmatic.py
cloudgym/scraper/: aws_samples.py  github.py  registry.py  validator.py
cloudgym/taxi/: __init__.py  cli.py  generator.py  validator.py
cloudgym/taxonomy/: __init__.py  base.py  cloudformation.py  terraform.py
cloudgym/utils/: config.py  ollama.py
cloudgym/validator/: cloudformation.py  opentofu.py  terraform.py
data/orbital/: docker-compose.yml
data/taxi/: benchmark.jsonl  eval_combined.md  eval_gguf_taxi_nl_3b_q4_gguf_plain.jsonl  eval_lmstudio_api_qwen_qwen3_coder_next_plain.jsonl  eval_summary.md  (+24 more)
examples/: .pre-commit-config.yaml  LINKEDIN_POST.md  USE_CASES.md  broken_s3.tf  broken_security_group.tf  broken_vpc.yaml
paper/: main.tex  references.bib
scripts/: build_benchmark.py  build_taxi_benchmark.py  combine_eval_summaries.py  eval_taxi.py  evaluate.py  expand_taxi_corpus.py  export_gguf.py  export_model.sh  finetune.sh  finetune_taxi.sh  finetune_taxi_v2.sh  format_for_finetuning.py  format_taxi_finetuning.py  generate.py  generate_gold.py  generate_gold_cf.py  generate_taxi_pairs.py  mine_query_patterns.py  mine_taxilang_tests.py  overnight.sh  run_7b_16L_train_and_eval.sh  run_7b_reeval.sh  run_7b_train.sh  run_7b_train_then_eval.sh  run_7b_v2_train_and_eval.sh  run_all.sh  run_baselines.py  run_compression_experiments.sh  run_finetuned_eval.sh  run_gemma4_eval.sh  run_overnight.sh  run_remaining.sh  run_steps_5_6.sh  run_v2_pipeline.sh  scrape.py  train.py  upload_taxi_to_hf.sh
tests/: test_inverter.py  test_pipeline.py  test_taxonomy.py  test_validator.py
(+10 files in other folders)
